cutoff amp found to be 0.563

--- a/utilities/verify_wav_stimuli.ipynb
+++ b/utilities/verify_wav_stimuli.ipynb
@@ -24,7 +24,7 @@
     "\n",
     "If this notebook runs without error, that is the case. In addition, the final plot can be inspected to see the largest absolute amplitude of the stimulus set used. Due to mismatches between the input- and output-levels of the various components in the audio-stream:\n",
     "\n",
-    " > __the peak amplitude should never exceed 0.5 (-3 dB)__\n",
+    " > __the peak amplitude should never exceed 0.563 (-5.0 dB)__\n",
     " \n",
     " ## File layout\n",
     " \n",
@@ -39,8 +39,23 @@
    },
    "outputs": [],
    "source": [
+    "wavdir = ''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
     "import matplotlib.pyplot as plt\n",
     "plt.style.use('ggplot')\n",
+    "\n",
+    "import os.path\n",
+    "if not os.path.exists(wavdir):\n",
+    "    raise IOError('Invalid wav-directory: {:s}'.format(wavdir))\n",
     "\n",
     "from verify_wav_stimuli import *\n",
     "Fs = 44100.  # get_wav hard-coded to raise error if not 44.1 kHz"
@@ -50,11 +65,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "wavdir = '~/tmp/rasha'\n",
     "wavnames = list_wavs_in_dir(wavdir)"
    ]
   },
