--- a/utilities/verify_wav_stimuli.ipynb
+++ b/utilities/verify_wav_stimuli.ipynb
@@ -24,7 +24,7 @@
     "\n",
     "If this notebook runs without error, that is the case. In addition, the final plot can be inspected to see the largest absolute amplitude of the stimulus set used. Due to mismatches between the input- and output-levels of the various components in the audio-stream:\n",
     "\n",
-    " > __the peak amplitude should never exceed 0.563 (-5.0 dB)__\n",
+    " > __the peak amplitude should never exceed 0.563 (-4.99 dB)__\n",
     " \n",
     " ## File layout\n",
     " \n",
@@ -54,7 +54,7 @@
     "plt.style.use('ggplot')\n",
     "\n",
     "import os.path\n",
-    "if not os.path.exists(wavdir):\n",
+    "if not os.path.exists(os.path.expanduser(wavdir)):\n",
     "    raise IOError('Invalid wav-directory: {:s}'.format(wavdir))\n",
     "\n",
     "from verify_wav_stimuli import *\n",
@@ -107,7 +107,9 @@
     "# max_env = np.abs(wavarr).max(axis=0).astype(float) / np.float(maxVal)\n",
     "max_env = 20. * np.log10(np.abs(wavarr).max(axis=0).astype(float) /\n",
     "                         np.float(maxVal))\n",
-    "print('The maximum stimulus envelope is {:.1f} dB'.format(max_env.max()))"
+    "max_stim_env = max_env.max()\n",
+    "print('The maximum stimulus envelope is {:.3f} '\n",
+    "      '({:.3f} dB)'.format(10**(max_stim_env / 20.), max_stim_env))"
    ]
   },
   {
@@ -130,7 +132,29 @@
     "    ax.plot(20. * np.log10(np.abs(wavarr[ww, 0, :]).astype(float) /\n",
     "                           np.float(maxVal)))\n",
     "ax.set_ylim(-9., 0.)\n",
-    "_ = ax.set_yticks([0., max_env.max(), -3., -6., -9.])"
+    "_ = ax.set_yticks([0., max_stim_env, -3., -6., -9.])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## What should I do with my stimuli?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "if max_stim_env > 20. * np.log10(0.563):\n",
+    "    att_factor = 0.563 / 10**(max_stim_env / 20.)\n",
+    "    print('You should attenuate your stimuli by:')\n",
+    "    print('  a factor of {:.3f} ({:.3f} dB)'.format(att_factor,\n",
+    "                                                    20 * np.log10(att_factor)))\n"
    ]
   }
  ],
