--- a/notebooks/verify_wav_stimuli.ipynb
+++ b/notebooks/verify_wav_stimuli.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -52,28 +52,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
     "proj_name = 'MEG_EEG-Training'\n",
-    "wavdir = os.path.join('/aux', proj_name, 'wav_stimuli')"
+    "wavdir = os.path.join('/aux', proj_name, 'wav_stimuli')\n",
+    "wavdir = '/Users/cjb/tmp/rasha'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "if not os.path.exists(os.path.expanduser(wavdir)):\n",
-    "    raise IOError('Invalid wav-directory: {:s}'.format(wavdir))\n",
-    "\n",
-    "from verify_wav_stimuli import *\n",
+    "    raise IOError('Invalid wav-directory: {:s}'.format(wavdir))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "sys.path.insert(0, '/Users/cjb/src/git/meeg-cfin/stimulation/utilities')\n",
+    "from wavhelpers import (list_wavs_in_dir, get_wav, wavlist_to_wavarr)\n",
     "Fs = 44100.  # get_wav hard-coded to raise error if not 44.1 kHz"
    ]
   },
@@ -86,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
